--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -2,7 +2,12 @@
 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
 <div class="summary">
     <p>
-      I have 10 years' experiences on coding, and I have been a front-end engineer for 5 years.
+      I have 9 years' experiences on coding, and I have been a front-end engineer for 5 years.
+      <br />
+      2006年进入大学接触编程，08年进入公司参与项目开发，已有累计9年的开发经验。从2011年开始接触前端算起，已经五六年的前端开发经验。
+      从最初的JQ、BackboneJS，到时下流行的VueJS，都有研究和使用。
+      从简单的PC页面、移动端广告业，到复杂的WebAPP、SPA应用，都得心应手。
+      这么多年的工作当中，其实我觉得技术并不是左右一名工程师好坏的最主要因素，而匠人心态才是一名合格工程师所应具备的素质。
     </p>
 </div><!--//summary-->
 </section><!--//section-->
