--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,8 +10,12 @@
                         <div class="company">塔读文学, Beijing</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                        <p>1. PC端 塔读文学主站（<a target="_blank" href="http://www.tadu.com">http://www.tadu.com</a>）新版开发。</p>
+                        <p>2. Mobile端 塔读文学移动站（<a target="_blank" href="http://m.tadu.com">http://m.tadu.com</a>）研发。</p>
+                        <p>3. 塔读文学APP嵌入页面的研发。</p>
+                        <p>刚刚进入公司，面对有经验的前端全部离职，并且没有留下详细的开发文档的情况下，一边解决线上bug，一边迅速组建了公司的前端架构。</p>
+                        <p>在还未转正的短短三个月，统一了工具，统一了规范，统一了流程，并且培训了团队里的一名中级前端工程师和四名初级前端工程师。</p>
+                        <p>在公司的一年多时间里，一直是前端组里，第一个来最后一个走的工程师，因为我知道我并不聪慧过人，但是我可以勤勉过人。</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -24,8 +28,9 @@
                         <div class="company">100教育, Beijing</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
+                        <p>1. 教员后台系统的重构以及研发。</p>
+                        <p>2. 参与研发公共组件库。</p>
+                        <p>3. 公司各类教育APP嵌入页面的研发。</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -38,7 +43,8 @@
                         <div class="company">恒宇伟业, Beijing</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                        <p>基于J2EE，SSH框架的水利信息化系统的研发。</p>
+                        <p>前端方面，使用到基于NodeJS的管理工具，信息化系统中JS插件的开发。</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -51,7 +57,8 @@
                         <div class="company">中技航帆, Beijing</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                        <p>在此段时间，开发嵌入式操作系统接口程序开发。</p>
+                        <p>.NET上位机软件，基于C#的手机端APP（Windows Mobile）以及网站的开发。</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
