--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,8 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Interests</h2>
 <ul class="list-unstyled interests-list">
-  <li>Coding</li>
-  <li>Reading</li>
-  <li>Karate</li>
+  <li>编程 - Coding</li>
+  <li>读书 - Reading</li>
+  <li>空手道 - Karate</li>
 </ul>
 </div><!--//interests-->
