--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,16 @@
 
     <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
     <div class="intro">
-        <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+        <p>塔读文学主站（<a target="_blank" href="http://www.tadu.com">http://www.tadu.com</a>）</p>
+        <p>塔读文学移动站（<a target="_blank" href="http://m.tadu.com">http://m.tadu.com</a>）</p>
+        <p>技术栈: </p>
+        <p>
+          管理工具: NodeJS + Gulp <br/>
+          移动站: RequireJS, BackboneJS <br/>
+          PC站: RequireJS, Bootstrap <br/>
+        </p>
+        <p></p>
+        <p></p>
     </div>
   <!--
     <div class="item">
