--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,8 +1,8 @@
 <div class="education-container container-block">
   <h2 class="container-block-title">Education</h2>
   <div class="item">
-      <h4 class="degree">BSc in Electronic Information Engineering</h4>
-      <h5 class="meta">Capital Normal University</h5>
+      <h4 class="degree">电子信息工程 学士学位 - BSc in Electronic Information Engineering</h4>
+      <h5 class="meta">首都师范大学 - Capital Normal University</h5>
       <div class="time">2006 - 2010</div>
   </div><!--//item-->
 </div><!--//education-container-->
