--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,25 +2,34 @@
 layout: compress
 ---
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
+<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 {% include head.html %}
 
 <body>
     <div class="wrapper">
         {% include sidebar.html %}
-        
+
         <div class="main-wrapper">
-           
+
            {{content}}
-            
+
         </div><!--//main-body-->
     </div>
- 
+
 {% include footer.html %}
- 
+
 {% include scripts.html %}
 </body>
-</html> 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?dd2509b43f23d51c3a12e0fc8183217e";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+</html>
 
