--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,7 +4,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Lead Developer</h3>
+                            <h3 class="job-title">Lead Developer - 前端主管</h3>
                             <div class="time">2015.5 - 2016.9</div>
                         </div><!--//upper-row-->
                         <div class="company">塔读文学, Beijing</div>
@@ -22,7 +22,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Senior Front-end Engineer</h3>
+                            <h3 class="job-title">Senior Front-end Engineer - 高级前端工程师</h3>
                             <div class="time">2013.1 - 2015.2</div>
                         </div><!--//upper-row-->
                         <div class="company">100教育, Beijing</div>
@@ -37,7 +37,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">JAVA Engineer</h3>
+                            <h3 class="job-title">JAVA Engineer - JAVA开发</h3>
                             <div class="time">2011.1 - 2012.11</div>
                         </div><!--//upper-row-->
                         <div class="company">恒宇伟业, Beijing</div>
@@ -51,7 +51,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Engineer</h3>
+                            <h3 class="job-title">Software Engineer - 软件工程师</h3>
                             <div class="time">2008.9 - 2010.12</div>
                         </div><!--//upper-row-->
                         <div class="company">中技航帆, Beijing</div>
