--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,5 @@
 <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
 <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
 <![endif]-->
+<style>.sidebar-wrapper .name{ font-size: 17px; }</style>
 </head>
